--- a/AppwithRedux/client/src/components/Header.css
+++ b/AppwithRedux/client/src/components/Header.css
@@ -14,6 +14,15 @@
     color: var(--logo);
 }
 
+.user-data
+{
+    font-family: "Orbitron", sans-serif;
+    font-weight: 1000;
+    font-size: large;
+    color:black;
+    height: 5px;
+}
+
 /* styles for company name */
 #pawscare
 {
