--- a/AppwithRedux/client/src/components/admin/Bookuserappointment.css
+++ b/AppwithRedux/client/src/components/admin/Bookuserappointment.css
@@ -45,9 +45,11 @@ body {
 .search form input[type="phone"] {
     width: 145px;
     padding: 10px 10px;
-    margin-right: 15px;
+    margin-right: 10px;
     font-style: italic;
     font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: -10px;
     font-size: 12px;
     border: 0;
     background-color: #fdfdfd;
