--- a/AppwithRedux/client/src/components/admin/Bookuserappointment.css
+++ b/AppwithRedux/client/src/components/admin/Bookuserappointment.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 body {
@@ -40,9 +41,9 @@ body {
     background: #EFF0F2;
 }
 
-.search form input[type="search"],
-.search form input[type="text"],
-.search form input[type="phone"] {
+/* SEARCH BAR */
+.search form input[type="search"]
+{
     width: 145px;
     padding: 10px 10px;
     margin-right: 10px;
@@ -59,6 +60,11 @@ body {
     width: 50%;
 }
 
+.search listview:hover,
+.search cardview:active
+{
+    color: #B84404;
+}
 /* Start Main */
 
 .list .main {
