--- a/AppwithRedux/client/src/components/Store.css
+++ b/AppwithRedux/client/src/components/Store.css
@@ -1,10 +1,10 @@
-h3
+/* h3
 {
     text-align: center;
     font-size: 30px;
     margin: 0;
     padding-top: 10px;
-}
+} */
 .item
 {
     display: flex;
@@ -36,12 +36,12 @@ h3
     border-radius: 20px;
     font-weight: 500;
 }
-.card
+/* .card
 {
     background-color:beige;
     border-radius: 20px;
     font-weight: 500;
-}
+} */
 
 .price
 {
@@ -260,7 +260,8 @@ h3
     color: #0d0d0d;
     font-size: 20px;
     font-weight: 600;
-    letter-spacing: 0
+    letter-spacing: 0;
+    padding: 0px;
 }
 .product-grid .price span{
     color: #888;
