--- a/AppwithRedux/client/src/components/admin/Manageusers.css
+++ b/AppwithRedux/client/src/components/admin/Manageusers.css
@@ -3,9 +3,12 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700');
 body{
     font-family: 'Open Sans', sans-serif;
-    overflow-x: hidden;
 }
 
+#profile-cards
+{
+  overflow-x: hidden;
+}
 
 /*Profile Card 3*/
 .profile-card-3 {
