--- a/AppwithRedux/client/src/components/Home.css
+++ b/AppwithRedux/client/src/components/Home.css
@@ -1,3 +1,7 @@
+#shop-now:hover
+{
+    cursor: pointer;
+}
 #image
 {
     width: 200px;
@@ -18,7 +22,7 @@ h1
         font-style: normal;
     }  
 }
-.card
+/* .card
 {
     display: flex;
     box-shadow: 2px 2px 4px ;
@@ -26,7 +30,7 @@ h1
 .container
 {
     box-shadow: 2px 2px 4px;
-}
+} */
 
 #welcome
 {
@@ -75,4 +79,81 @@ h1
         height: 225px;
         width: 200px;
     } */
+}
+
+
+.wrapper
+{
+    margin:3vh;
+}
+
+.card{
+    border: none;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    overflow:hidden;
+    border-radius:20px;
+    min-height:450px;
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);
+
+    @media (max-width: 768px) {
+    min-height:350px;
+}
+
+@media (max-width: 420px) {
+    min-height:300px;
+}
+
+&.card-has-bg{
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    background-size:120%;
+    background-repeat:no-repeat;
+    background-position: center center;
+    
+    &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+}
+
+  &:hover {
+    transform: scale(0.98);
+     box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
+    background-size:130%;
+     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+}
+ .card-footer{
+  background: none;
+   border-top: none;
+ }
+  .card-title{font-weight:800}
+ .card-meta{color:rgba(0,0,0,0.3);
+  text-transform:uppercase;
+   font-weight:500;
+   letter-spacing:2px;}
+ .card-body{ 
+   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+ 
+
+  }
+ &:hover {
+   .card-body{
+     margin-top:30px;
+     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+   }
+ cursor: pointer;
+ transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+ .card-img-overlay {
+  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+ background: rgb(255, 255, 255);
+background: linear-gradient(0deg, rgba(114, 105, 86, 0.379) 0%, rgba(172, 172, 172, 0.078) 100%);
+}
+}
+@media (max-width: 767px){
+  
 }
