--- a/AppwithRedux/client/src/components/Home.css
+++ b/AppwithRedux/client/src/components/Home.css
@@ -121,14 +121,19 @@ h1
 
   &:hover {
     transform: scale(0.98);
-     box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
+    box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
     background-size:130%;
-     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   }
 }
  .card-footer{
   background: none;
    border-top: none;
+ }
+.turtle,
+.hamster
+ {
+    width: 45px;
  }
   .card-title{font-weight:800}
  .card-meta{color:rgba(0,0,0,0.3);
@@ -156,4 +161,14 @@ background: linear-gradient(0deg, rgba(114, 105, 86, 0.379) 0%, rgba(172, 172, 1
 }
 @media (max-width: 767px){
   
+}
+
+/* #category-circle
+{
+    width: 50vh;
+    height: 50vh;
+} */
+section
+{
+    overflow-x: hidden;
 }
