--- a/AppwithRedux/client/src/components/Header.css
+++ b/AppwithRedux/client/src/components/Header.css
@@ -14,6 +14,10 @@
     color: var(--logo);
 }
 
+.nav-link .active
+{
+    color: var(--active);
+}
 .user-data
 {
     font-family: "Orbitron", sans-serif;
@@ -52,3 +56,29 @@
     display: flex;
     box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
 }
+
+#icon {
+    position: relative;
+    display: inline-block;
+    overflow-x: hidden;
+  }
+  
+  #icon span {
+    position: absolute;
+    top: 1px; 
+    background-color:var(--active);
+    color: #000000;
+    font-weight: 900;
+    border-radius: 70%;
+    padding: 2px 8px;
+    font-size: 12px;
+  }
+  
+  @media screen and (min-width: 992px) {
+    #icon span {
+      right:0px;
+      top: 1px;
+      font-size: 9px;
+ /* Adjusted right value for laptop-sized screens */
+    }
+  }
