--- a/AppwithRedux/client/src/components/Home.css
+++ b/AppwithRedux/client/src/components/Home.css
@@ -246,6 +246,27 @@ section
 	border-radius: 5px;
 	font-size: 13px;
 }	
+.modal-confirm .success-icon-box {
+	color: #fff;		
+	position: absolute;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+	top: -70px;
+	width: 95px;
+	height: 95px;
+	border-radius: 50%;
+	z-index: 9;
+	background: #11c371;
+	padding: 15px;
+	text-align: center;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.modal-confirm .success-icon-box i {
+	font-size: 56px;
+	position: relative;
+	top: 4px;
+}
 .modal-confirm .icon-box {
 	color: #fff;		
 	position: absolute;
